# SoloDawn

./: .dockerignore  .gitignore  AUDIT_REPORT.md  Cargo.toml  README.md  README.zh-CN.md  package.json  sonar-project.properties
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci-basic.yml  ci-docker.yml  ci-e2e.yml  ci-installer.yml  ci-notify.yml  ci-quality.yml
crates/cc-switch/: Cargo.toml
crates/cc-switch/src/: atomic_write.rs  config_path.rs  gemini.rs  switcher.rs
crates/db/: Cargo.toml
crates/deployment/: Cargo.toml
crates/executors/: Cargo.toml  default_mcp.json
crates/feishu-connector/: Cargo.toml  build.rs
crates/feishu-connector/proto/: pbbp2.proto
crates/feishu-connector/src/: auth.rs  client.rs  events.rs  lib.rs  messages.rs  proto.rs  reconnect.rs  sdk.rs  types.rs
crates/feishu-connector/tests/: live_e2e.rs
crates/local-deployment/: Cargo.toml
crates/quality/: Cargo.toml  build.rs
crates/quality/src/: config.rs  engine.rs  issue.rs  lib.rs  metrics.rs  report.rs  rule.rs  sarif.rs
crates/quality/src/analysis/: coverage_parser.rs  mod.rs
crates/quality/src/discovery/: mod.rs
crates/quality/src/gate/: condition.rs  evaluator.rs  mod.rs  result.rs
crates/quality/src/provider/: builtin_common.rs  builtin_frontend.rs  builtin_rust.rs  compiled_rule.rs  completeness.rs  coverage.rs  declarative.rs  delivery_readiness.rs  frontend.rs  mod.rs  repo.rs  rust_analyzer.rs  security.rs  sonar.rs
crates/quality/src/rules/: mod.rs
crates/quality/src/rules/common/: duplication.rs  encoding.rs  large_file.rs  line_length.rs  mod.rs  secret_detection.rs  trailing_whitespace.rs  weak_default_detection.rs
crates/quality/src/rules/rust/: clone_usage.rs  cognitive_complexity.rs  cyclomatic_complexity.rs  documentation.rs  error_handling.rs  file_length.rs  function_length.rs  magic_numbers.rs  mod.rs  naming.rs  nesting_depth.rs  todo_comments.rs  type_complexity.rs  unsafe_usage.rs
crates/quality/src/rules/typescript/: any_usage.rs  complexity.rs  console_usage.rs  file_length.rs  function_length.rs  import_order.rs  mod.rs  naming.rs  nesting_depth.rs  react_hooks.rs  todo_comments.rs  type_assertion.rs
crates/runner/: Cargo.toml  build.rs
crates/runner/src/: lib.rs  main.rs  service.rs
crates/server/: Cargo.toml
crates/services/: Cargo.toml
crates/services/src/: lib.rs
crates/services/src/services/: analytics.rs  approvals.rs  cc_switch.rs  chat_connector.rs  cli_health_monitor.rs  cli_installer.rs  container.rs  diff_stream.rs  error_handler.rs  feishu.rs  file_search.rs  filesystem.rs  git.rs  git_watcher.rs  image.rs  merge_coordinator.rs  mod.rs  notification.rs  pr_monitor.rs  project.rs  qa_repos.rs  runner_client.rs  workspace_manager.rs  worktree_manager.rs
crates/services/src/services/concierge/: agent.rs  mod.rs  notifications.rs  prompt.rs  sync.rs  tools.rs
crates/services/src/services/config/: mod.rs
crates/services/src/services/config/editor/: mod.rs
crates/services/src/services/config/versions/: v2.rs  v3.rs  v4.rs  v5.rs  v6.rs  v7.rs  v8.rs  v9.rs
crates/services/src/services/events/: streams.rs  types.rs
crates/services/src/services/git/: cli.rs
crates/services/src/services/git_host/: detection.rs  types.rs
crates/services/src/services/git_host/azure/: cli.rs  mod.rs
crates/services/src/services/git_host/github/: cli.rs  mod.rs
crates/services/src/services/orchestrator/: agent.rs  audit_plan.rs  audit_principles.rs  config.rs  constants.rs  llm.rs  message_bus.rs  mod.rs  persistence.rs  prompt_handler.rs  quality_policy.rs  resilient_llm.rs  runtime.rs  runtime_actions.rs  state.rs  terminal_coordinator.rs  terminal_coordinator_test.rs  tests.rs  types.rs
crates/services/src/services/rule_authoring/: adversary.rs  empirical_test.rs  generate.rs  json.rs  mod.rs  pipeline.rs  prompts.rs  reverse_engineer.rs  tests_pipeline.rs  types.rs
crates/services/src/services/terminal/: bridge.rs  detector.rs  launcher.rs  output_fanout.rs  process.rs  prompt_detector.rs  prompt_watcher.rs
crates/services/src/utils/: mod.rs
crates/services/tests/: custom_rule_gate_test.rs  error_handler_test.rs  git_watcher_integration_test.rs  git_workflow.rs  merge_coordinator_test.rs  phase18_git_watcher.rs  phase18_scenarios.rs  quality_policy_resolver_test.rs  terminal_binding_test.rs  terminal_integration.rs  terminal_lifecycle_test.rs  terminal_logging_test.rs  terminal_timeout_test.rs
crates/tray/: Cargo.toml  build.rs
crates/tray/src/: main.rs
crates/utils/: Cargo.toml
docker/: Dockerfile  Dockerfile.runner  Dockerfile.server
docker/compose/: .env.example  docker-compose.dev.yml  docker-compose.split.yml  docker-compose.yml
docker/scripts/: cleanup-quality-data.sh  init-sonar.sh
docs/: R5-dead-code-inventory.md
docs/audit/: 2026-07-01-multi-agent-bug-audit.md  R1-ide-editor-connection-deletion-audit.md
docs/baseline/: env.txt
docs/feishu/: DECISION-feishu-connector.md  IMPLEMENTATION-NOTES.md  PRD-feishu-sdk-migration.md  PRD-fix-existing-connector.md  PRD-migrate-connector.md  openlark-api-notes.md
docs/quality/: PRD-ai-editable-quality-rules.md  PRD-ai-editable-quality-rules.zh-CN.md
docs/research/: R3_DIY_Workspace_Map.md  R4-quality-gate-audit-system.md
docs/streamline/: FINAL-REPORT.md  P2-candidate-ledger.md  P3-design-A.md  P3-design-B.md  P3-design-C.md  P3-design-spec.md  P4-FINAL.md  P4-execution-plan-frontend.md  P4-execution-plan-rust.md  P4-execution-plan.md  Q2-audit-surfacing-findings.md  UI-landing-map.md  candidates-delete.json  candidates-investigate.json  (+8 more)
frontend/: .eslintrc.cjs  postcss.config.cjs  vite.config.ts  vitest.config.ts
installer/: README.md  build-installer.ps1  gitcortex.iss  solodawn.iss
proto/: runner.proto
quality/: quality-gate.yaml  triage_results.md  wave1_findings.md  wave2_findings.md
reports/: R6_backend_api_db_settings_extension_points.md
research/: R2-orchestration-workspace-flow.md
scripts/: audit-security.sh  run-dev.js  setup-windows.cmd  setup-windows.ps1  verify-baseline.sh
shared/: types.ts
(+778 files in other folders)
