[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/db",
    "crates/executors",
    "crates/services",
    "crates/utils",
    "crates/local-deployment",
    "crates/deployment",

    "crates/cc-switch",
    "crates/feishu-connector",
    "crates/quality",
    "crates/runner",
    "crates/tray"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "multipart", "ws"] }
tower-http = { version = "0.5", features = ["cors", "request-id", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
git2 = { version = "0.20.3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
openlark = { version = "=0.17.0", default-features = false, features = ["communication", "websocket"] }
thiserror = "2.0.12"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
ts-rs = { git = "https://github.com/xazukx/ts-rs.git", rev = "b5c8277ac9f321a0be7453eef029466152b13fc8", features = ["uuid-impl", "chrono-impl", "no-serde-warnings", "serde-json-impl"] }
schemars = { version = "1.0.4", features = ["derive", "chrono04", "uuid1", "preserve_order"] }
serde_with = "3"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }

# Local dev profile: prioritize fast incremental builds.
# - incremental on by default for dev, but explicit here for clarity.
# - debug = "line-tables-only": enough for panic backtraces, much smaller/faster
#   than full debug info (which is the default for dev).
# - codegen-units = 256: parallelize codegen for faster incremental builds.
[profile.dev]
incremental = true
debug = "line-tables-only"
codegen-units = 256

# CI/dev "fast-check" profile: used by `cargo nextest run --profile ci` to get
# back parallel-friendly codegen without expensive optimizations. Tests still
# run the exact same code as release, just compiled faster.
[profile.ci]
inherits = "dev"
incremental = false
debug = "line-tables-only"
codegen-units = 16

[profile.release]
debug = 0
strip = true

[profile.docker]
inherits = "release"
debug = 0
split-debuginfo = "off"
strip = true
opt-level = 1
codegen-units = 256
