[package]
name = "cc-switch"
version = "0.1.0"
edition = "2021"
description = "CLI configuration switching core for SoloDawn"
authors = ["SoloDawn Contributors"]
license = "Apache-2.0"

[dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 文件系统
dirs = "5.0"
tempfile = "3"

# TOML 解析 (Codex 配置)
toml = "0.8"

# 日志
tracing = "0.1"
