[package]
name = "cc-switch"
version = "0.1.0"
# Intentionally pinned to 2021: upstream cc-switch core is published/maintained
# on edition 2021; bumping to 2024 would require auditing async closure/capture
# changes and re-verifying upstream compatibility. Left on 2021 to avoid
# cascading edition-bump risk.
edition = "2021"
description = "CLI configuration switching core for SoloDawn"
authors = ["SoloDawn Contributors"]
license = "Apache-2.0"

[dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 文件系统
dirs = "5.0"
tempfile = "3"

# TOML 解析 (Codex 配置)
toml = "0.8"

# 日志
tracing = { workspace = true }
