[package]
name = "feishu-connector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rand = "0.8"
openlark = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
