[package]
name = "quality"
version = "0.1.0"
edition = "2024"
description = "Quality gate engine for GitCortex — code quality analysis, condition evaluation, and report aggregation"
license = "Apache-2.0 AND LGPL-3.0-or-later"

# Quality gate model design inspired by SonarQube (LGPL-3.0)
# See: https://github.com/SonarSource/sonarqube

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = { workspace = true }
futures = "0.3"
regex = "1"
reqwest = { workspace = true, features = ["multipart"] }
syn = { version = "2", features = ["full", "parsing", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
