[package]
name = "quality"
version = "0.1.0"
edition = "2024"
description = "Quality gate engine for SoloDawn — code quality analysis, condition evaluation, and report aggregation"
license = "Apache-2.0 AND LGPL-3.0-or-later"
build = "build.rs"

# Quality gate model design inspired by SonarQube (LGPL-3.0)
# See: https://github.com/SonarSource/sonarqube

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = { workspace = true }
ts-rs = { workspace = true }
futures = "0.3"
regex = "1"
reqwest = { workspace = true, features = ["multipart"] }
glob = "0.3"
syn = { version = "2", features = ["full", "parsing", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

# ---------------------------------------------------------------------------
# P2 ast-grep structural rule format — OPTIONAL, OFF by default.
#
# Gated behind the `ast-grep` feature so the DEFAULT build pulls ZERO new deps
# (and zero cc-compiled tree-sitter grammars) and behaves exactly as today. Only
# a build that explicitly opts in (`--features ast-grep`, or CI `--all-features`)
# pays the embedding-engine + grammar build cost.
#
# Build weight is minimized by selecting ONLY the four grammars the custom-rule
# format targets — rust + typescript + tsx + javascript. `ast-grep-language`
# exposes per-language cargo features, so we disable its default 27-grammar
# `builtin-parser` and opt in to just `tree-sitter-rust` + `tree-sitter-typescript`
# (which provides BOTH TypeScript and Tsx) + `tree-sitter-javascript`. That keeps
# the cc (C) compile surface to 3 grammar crates instead of 27.
ast-grep-config = { version = "0.43", optional = true }
ast-grep-core = { version = "0.43", optional = true }
ast-grep-language = { version = "0.43", optional = true, default-features = false, features = [
    "tree-sitter-rust",
    "tree-sitter-typescript",
    "tree-sitter-javascript",
] }

[features]
default = []
# Enables the P2 ast-grep structural custom-rule format. NOT in `default` — the
# stock build is dependency-identical to today's.
ast-grep = ["dep:ast-grep-config", "dep:ast-grep-core", "dep:ast-grep-language"]
