[package]
name = "solodawn-tray"
version = "0.0.153"
edition = "2024"
description = "SoloDawn system tray application for Windows"
publish = false

[[bin]]
name = "solodawn-tray"
path = "src/main.rs"

[dependencies]
tray-icon = "0.19"
winit = { version = "0.30", features = ["rwh_06"] }
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
open = "5"
dotenv = "0.15"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
